@@ -7,6 +7,7 @@ The following bugs have been fixed or resolved on this branch.
 
 486180  [MIPS] 'VexGuestArchState' has no member named 'guest_IP_AT_SYSCALL'
 486293  memccpy false positives
+486569  linux inotify_init syscall wrapper missing POST entry in syscall_table
 
 To see details of a given bug, visit
   https://bugs.kde.org/show_bug.cgi?id=XXXXXX
